Revision history for perl distribution Mojo-mysql

1.02 Not Released
 - Fix utf8 handling

1.01 2017-03-25T08:24:29+0100
 - Add strict_mode() method and constructor #29

1.00 2017-02-12T18:30:58+0100
 - Add support for generating queries with SQL::Abstract
 - Add abstract attribute to Mojo::Pg
 - Add delete, insert, select and update methods to Mojo::Pg::Database
 - Add database_class attribute to Mojo::mysql
 - Add results_class attribute to Mojo::mysql::Database
 - Improved contextual caller information in query error messages
 - Compatible with Mojolicious 7.18

0.14 2016-02-15T14:06:24+0100
 - Add Mojo::mysql::auto_migrate

0.13 2016-01-27T21:05:37+0100
 - Remove deprecrated do() method
 - Add finish() to Mojo::mysql::Results
 - Fix bug where non-blocking queries could get lost after the database
   connection got closed unexpectedly
   https://github.com/kraih/mojo-pg/commit/2165b8e1131f2a5044ec2aae1c0ba8a00232b7c8
 - Improved Mojo::mysql::Migrations to detect if the currently active version
   is greater than the latest version.
   https://github.com/kraih/mojo-pg/commit/92bc312e725042b748950b9c61319d0256d0004a

0.12 2015-05-02T17:55:13Z
 - Added module Mojo::mysql::PubSub.
 - Added pubsub attribute to Mojo::mysql.

0.11 2015-04-06T03:38:31Z
 - Fixed bug in Mojo::mysql::Migrations where migrations would sometimes be
   executed in the wrong order.

0.10 2015-04-05T23:32:03Z
 - Fixed bug in Mojo::mysql::Migrations where the latest version could not
   always be determined correctly. (Hernan Lopes)
 - Updated blog example application from Mojo::Pg

0.09 2015-03-29T18:29:35Z
 - Fixed Mojo::mysql::Migrations to allow delimiter in comments and quoted
   strings
 - delimiter support in Mojo::mysql::Migrations, allows creation of stored
   procedures and triggers in migration scripts
 - 'quote' and 'quote_id' methods in Mojo::mysql::Database

0.08 2015-03-24T13:14:32Z
 - blog example from Mojo::Pg
 - better examples in POD