@@ -2,6 +2,8 @@ Revision history for perl distribution Mojo-mysql
 
 1.02 Not Released
  - Fix utf8 handling
+ - Add proper quoting of table and column names #30
+ - Add warning when using Mojo::mysql::PubSub
 
 1.01 2017-03-25T08:24:29+0100
  - Add strict_mode() method and constructor #29
